apps/fountain-team/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fountain-team
  namespace: managoat-demos
  labels:
    app: fountain-team
spec:
  type: ClusterIP
  selector:
    app: fountain-team
  ports:
    - port: 80
      targetPort: 8080
